Added STI submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "libs/bump"]
 	path = libs/bump
 	url = git@github.com:kikito/bump.lua
+[submodule "libs/sti"]
+	path = libs/sti
+	url = https://github.com/karai17/Simple-Tiled-Implementation.git
