Added tile de neige + map test de neige

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 	url = git@github.com:kikito/bump.lua
 [submodule "libs/sti"]
 	path = libs/sti
-	url = https://github.com/karai17/Simple-Tiled-Implementation.git
+	url = git@github.com:karai17/Simple-Tiled-Implementation.git
